primera versión página web

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,18 +7,18 @@
 	class="mb-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row"
 >
 	<div class="mb-10 flex w-full flex-col items-center justify-center lg:mb-0 lg:w-1/2">
-		<h2 class="font-monospace text-2xl text-green lg:text-4xl">About me</h2>
+		<h2 class="font-monospace text-2xl text-green lg:text-4xl">Acerca de nosotros</h2>
 		<span class="mb-6 ml-2 h-1 w-10 bg-green"></span>
 	</div>
 
 	<div class="w-full text-justify text-black dark:text-white lg:w-1/2">
 		<p class="mb-2">
-			Con experiencia en supervisión de proyectos y enseñanza en Crack The Code, destaco por abordar
-			desafíos de gestión y análisis de manera efectiva. Especializado en la enseñanza de
-			fundamentos y temas avanzados de programación, mi excelencia docente se refleja en
-			reconocimientos y altas calificaciones estudiantiles. Actualmente, construyo una sólida base
-			en diseño de sistemas, resolución de problemas e implementación, demostrando mi habilidad para
-			crear y optimizar soluciones técnicas en proyectos exitosos con Java, AWS y React.js.
+			Tenemos experiencia en supervisión de proyectos, desarrollo de páginas webs en WordPress y
+			enseñanza en Crack The Code, destacamos por abordar desafíos de gestión y análisis de manera
+			efectiva. Especializados en la enseñanza de fundamentos y temas avanzados de programación.
+			Actualmente, construimos una sólida base en diseño de sistemas, resolución de problemas e
+			implementación, demostrando mi habilidad para crear y optimizar soluciones técnicas en
+			proyectos exitosos con Java, AWS y React.js.
 		</p>
 	</div>
 </section>
