--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,11 +11,14 @@ import Button from '@components/ui/Button.astro';
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
 			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hi! My name is <span class="text-green">Kit</span> and I am a web developer based in Lima.
+				Hola! Mi nombre es <span class="text-green">Kit</span> y somos desarrolladores webs radicados
+				en Lima, Perú.
 			</h1>
 		</div>
 		<div class="mb-10">
-			<Button style={'primary'} size={'lg'} class={'flex'} name="learn more">Learn more</Button>
+			<a href="#about">
+				<Button style={'primary'} size={'lg'} class={'flex'} name="learn more">Leer más</Button>
+			</a>
 		</div>
 	</div>
 	<div data-testid="hero-img" class="mb-10 flex w-1/2 items-center justify-center">
