--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,15 +5,15 @@ import { Astronav, MenuIcon, MenuItems } from 'astro-navbar';
 
 const menuitems = [
 	{
-		title: 'About',
+		title: 'Acerca de nosotros',
 		path: '#about',
 	},
 	{
-		title: 'Projects',
+		title: 'Proyectos',
 		path: '#projects',
 	},
 	{
-		title: 'Contact',
+		title: 'Contacto',
 		path: '#contact',
 	},
 ];
@@ -22,7 +22,7 @@ const menuitems = [
 <header data-testId="header" class="my-5 flex flex-col items-center justify-between lg:flex-row">
 	<Astronav>
 		<div class="flex w-full items-center justify-between lg:w-auto">
-			<Button size={'sm'} name="Download CV">Download CV</Button>
+			<Button size={'sm'} name="Download CV">Descargar CV</Button>
 			<div class="block lg:hidden">
 				<MenuIcon class="h-4 w-4 text-black dark:text-white" />
 			</div>
