Actualizar texto en la página Acerca de y Contacto

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,21 +4,24 @@
 <section
 	data-testid="about"
 	id="about"
-	class="mb-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row"
+	class="mb-10 flex flex-col items-center justify-center lg:mb-10 lg:h-screen lg:flex-row"
 >
 	<div class="mb-10 flex w-full flex-col items-center justify-center lg:mb-0 lg:w-1/2">
-		<h2 class="font-monospace text-2xl text-green lg:text-4xl">Acerca de nosotros</h2>
+		<h2 class="font-monospace text-2xl text-green lg:text-4xl">Acerca de mi</h2>
 		<span class="mb-6 ml-2 h-1 w-10 bg-green"></span>
 	</div>
 
 	<div class="w-full text-justify text-black dark:text-white lg:w-1/2">
 		<p class="mb-2">
-			Tenemos experiencia en supervisión de proyectos, desarrollo de páginas webs en WordPress y
-			enseñanza en Crack The Code, destacamos por abordar desafíos de gestión y análisis de manera
-			efectiva. Especializados en la enseñanza de fundamentos y temas avanzados de programación.
-			Actualmente, construimos una sólida base en diseño de sistemas, resolución de problemas e
-			implementación, demostrando mi habilidad para crear y optimizar soluciones técnicas en
-			proyectos exitosos con Java, AWS y React.js.
+			<span class="text-amber">+2 años</span> de Experiencia en supervisión de proyectos, desarrollo de ERP/CRM en ODOO y Worpress
+			como sistemas de Facturación.
+		</p>
+		<p class="mb-2">
+			Me destaco por abordar desafíos de gestión y análisis de manera efectiva con gran liderazgo y
+			enfocado en la agilidad.
+		</p>
+		<p class="mb-2">
+			Conoce de mis trabajos aqui ⬇️.
 		</p>
 	</div>
 </section>
