--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,8 @@
 			target="_blank"
 			rel="noopener"
 		>
-			<span class="text-green"> Kit</span>
+			<span class="text-green"> Steve Gomez </span>
 		</a>
+		e inspirado por Veranika Kasparevych
 	</p>
 </footer>
