--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import Button from '@components/ui/Button.astro';
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
 			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hola! Mi nombre es <span class="text-green">Kit</span> y somos desarrolladores webs radicados
+				Hola! Soy <span class="text-green">Steve</span> desarrollador de software radicado
 				en Lima, Perú.
 			</h1>
 		</div>
@@ -27,8 +27,8 @@ import Button from '@components/ui/Button.astro';
 			alt="Coding boys"
 			aspectRatio="4:4"
 			format="svg"
-			width={600}
-			height={600}
+			width={500}
+			height={500}
 			loading="eager"
 		/>
 	</div>
