--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Contact from '@components/Contact.astro';
 import Hero from '@components/Hero.astro';
 import Projects from '@components/Projects.astro';
 import BackToTop from '@components/ui/BackToTop.astro';
+import CardLinkedin from '@components/ui/CardLinkedin.astro';
 import Layout from '@layouts/Layout.astro';
 ---
 
@@ -11,6 +12,7 @@ import Layout from '@layouts/Layout.astro';
 	<main>
 		<Hero />
 		<About />
+		<CardLinkedin />
 		<Projects />
 		<Contact />
 		<BackToTop />
