Actualizar estilos y contenido de la sección "Acerca de mi"

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,24 +4,22 @@
 <section
 	data-testid="about"
 	id="about"
-	class="mb-10 flex flex-col items-center justify-center lg:mb-10 lg:h-screen lg:flex-row"
+	class="mb-10 mt-auto flex flex-col items-center justify-center lg:mb-10 lg:h-screen lg:flex-row bg-blue bg-opacity-10 box-border border-4"
 >
 	<div class="mb-10 flex w-full flex-col items-center justify-center lg:mb-0 lg:w-1/2">
 		<h2 class="font-monospace text-2xl text-green lg:text-4xl">Acerca de mi</h2>
 		<span class="mb-6 ml-2 h-1 w-10 bg-green"></span>
 	</div>
 
-	<div class="w-full text-justify text-black dark:text-white lg:w-1/2">
-		<p class="mb-2">
-			<span class="text-amber">+2 años</span> de Experiencia en supervisión de proyectos, desarrollo de ERP/CRM en ODOO y Worpress
-			como sistemas de Facturación.
+	<div class="w-full text-base lg:text-2xl lg:text-left text-center text-black dark:text-white lg:w-1/2 mx-10 lg:mx-0 my-4 ">
+		<p class="mb-2 mx-4">
+			<span class="text-amber">+2 años</span> de Experiencia en supervisión de proyectos, desarrollo
+			de ERP/CRM en ODOO y Worpress como sistemas de Facturación.
 		</p>
-		<p class="mb-2">
+		<p class="mb-2 mx-4">
 			Me destaco por abordar desafíos de gestión y análisis de manera efectiva con gran liderazgo y
 			enfocado en la agilidad.
 		</p>
-		<p class="mb-2">
-			Conoce de mis trabajos aqui ⬇️.
-		</p>
+		<p class="mb-2 mx-4">Conoce de mis trabajos aqui ⬇️.</p>
 	</div>
 </section>
