--- a/src/components/ui/CardLinkedin.astro
+++ b/src/components/ui/CardLinkedin.astro
@@ -1,9 +1,33 @@
-<!-- 
-<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+<!-- <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"
+></script>
 
-<div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="steve-gomez-dev" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://pe.linkedin.com/in/steve-gomez-dev/es?trk=profile-badge">Steve Edward Gomez Huamani</a></div>
-              
+<div
+	class="badge-base LI-profile-badge"
+	data-locale="es_ES"
+	data-size="medium"
+	data-theme="light"
+	data-type="VERTICAL"
+	data-vanity="steve-gomez-dev"
+	data-version="v1"
+>
+	<a
+		class="badge-base__link LI-simple-link"
+		href="https://pe.linkedin.com/in/steve-gomez-dev/es?trk=profile-badge"
+		>Steve Edward Gomez Huamani</a>
+</div>
 
-
-<div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="steve-gomez-dev" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://pe.linkedin.com/in/steve-gomez-dev/es?trk=profile-badge">Steve Edward Gomez Huamani</a></div>
-               -->
+<div
+	class="badge-base LI-profile-badge"
+	data-locale="es_ES"
+	data-size="medium"
+	data-theme="dark"
+	data-type="VERTICAL"
+	data-vanity="steve-gomez-dev"
+	data-version="v1"
+>
+	<a
+		class="badge-base__link LI-simple-link"
+		href="https://pe.linkedin.com/in/steve-gomez-dev/es?trk=profile-badge"
+		>Steve Edward Gomez Huamani</a>
+</div>
+ -->
