--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -6,12 +6,18 @@ interface Props {
 	url?: string;
 	alt?: string;
 	title?: string;
-	description: string,
+	description: string;
 	tags: string[];
 	children?: HTMLElement | HTMLElement[];
 }
 
-const { url = '#', alt = 'Project image', description = 'Project Description', title = 'Project title', tags = ['Tags'] } = Astro.props;
+const {
+	url = '#',
+	alt = 'Project image',
+	description = 'Project Description',
+	title = 'Project title',
+	tags = ['Tags'],
+} = Astro.props;
 ---
 
 <section class="w-full p-4 md:w-1/2 lg:w-1/3">
@@ -33,7 +39,7 @@ const { url = '#', alt = 'Project image', description = 'Project Description', t
 			</div>
 			<div class="mt-1 p-2">
 				<h3 class="text-xl text-green lg:text-2xl">{title}</h3>
-				<p class="text-black text-s">{description}</p>
+				<p class="text-s text-black">{description}</p>
 				<Tags tags={tags} />
 			</div>
 		</a>
