--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -9,7 +9,7 @@ import Social from '@components/ui/Social.astro';
 	class="flex flex-col flex-wrap items-center justify-center gap-8 text-black dark:text-white lg:mb-0 lg:h-screen"
 >
 	<a href="https://wa.me/51958236730?text=Hola!%20quiero%20colaborar%20contigo">
-		<Button size={'lg'} style={'primary'} name="Contact">Colaboremos 🫱🏻‍🫲🏼</Button>
+		<Button size={'lg'} style={'primary'} name="Contact">Let's collaborate 🫱🏻‍🫲🏼</Button>
 	</a>
 	<hr class="w-1/2" />
 	<div class="flex flex-col gap-8 lg:flex lg:flex-row lg:gap-20">
