--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,12 +11,12 @@ import Button from '@components/ui/Button.astro';
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
 			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hola, soy <span class="text-green">Steve</span> desarrollador de software.
+				Hi, I'm  <span class="text-green">Steve</span>, a software developer with over <span class="text-green">+2 years</span> of experience.
 			</h1>
 		</div>
 		<div class="mb-10">
 			<a href="#about">
-				<Button style={'primary'} size={'lg'} class={'flex'} name="learn more">Leer más</Button>
+				<Button style={'primary'} size={'lg'} class={'flex'} name="learn more">Read more!</Button>
 			</a>
 		</div>
 	</div>
