--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -34,7 +34,7 @@ const projects = await getCollection('projects', ({ data }) => {
 		class="flex flex-row text-black hover:text-green dark:text-white dark:hover:text-green"
 		aria-label="link to repository"
 	>
-		Ver archivo completo de proyectos privados
+	View full file of private projects
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
 			fill="none"
