--- a/src/components/ui/Social.astro
+++ b/src/components/ui/Social.astro
@@ -3,20 +3,21 @@ import { Icon } from 'astro-icon';
 ---
 
 <a href="https://github.com/badkitten-bug" target="_blank" rel="noopener" aria-label="github"
-	><Icon
-		class="h-8 hover:text-green dark:hover:text-green md:h-12"
-		name="simple-icons:github"
-	/></a
+	><Icon class="h-8 hover:text-green dark:hover:text-green md:h-12" name="simple-icons:github" /></a
 >
-<a href="https://www.linkedin.com/in/steve-gomez-dev/" target="_blank" rel="noopener" aria-label="linkedin"
+<a
+	href="https://www.linkedin.com/in/steve-gomez-dev/"
+	target="_blank"
+	rel="noopener"
+	aria-label="linkedin"
 	><Icon
 		class="h-8 hover:text-green dark:hover:text-green md:h-12"
 		name="simple-icons:linkedin"
 	/></a
 >
-<a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="twitter"
+<!-- <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="twitter"
 	><Icon
 		class="h-8 hover:text-green dark:hover:text-green md:h-12"
 		name="simple-icons:twitter"
 	/></a
->
+> -->
