--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,7 +7,7 @@
 	class="mb-10 mt-auto flex flex-col items-center justify-center bg-blue bg-opacity-10 lg:mb-10 lg:h-screen lg:flex-row"
 >
 	<div class="mb-10 flex w-full flex-col items-center justify-center lg:mb-0 lg:w-1/2">
-		<h2 class="font-monospace text-2xl text-green lg:text-4xl">Acerca de mi</h2>
+		<h2 class="font-monospace text-2xl text-green lg:text-4xl">About Me</h2>
 		<span class="mb-6 ml-2 h-1 w-10 bg-green"></span>
 	</div>
 
@@ -15,13 +15,13 @@
 		class="mx-10 my-4 w-full text-center text-base text-black dark:text-white lg:mx-0 lg:w-1/2 lg:text-left lg:text-2xl"
 	>
 		<p class="mx-4 mb-2">
-			<span class="text-amber">+2 años</span> de Experiencia en supervisión de proyectos, desarrollo
-			de ERP/CRM en ODOO y Worpress como sistemas de Facturación.
+			<span class="text-amber">+2 years</span> of experience in project supervision, ERP/CRM development
+			using React, ODOO, WordPress for billing systems.
 		</p>
 		<p class="mx-4 mb-2">
-			Me destaco por abordar desafíos de gestión y análisis de manera efectiva con gran liderazgo y
-			enfocado en la agilidad.
+			I excel at addressing management and analytical challenges effectively, with strong leadership
+			and a focus on agility.
 		</p>
-		<p class="mx-4 mb-2">Conoce de mis trabajos aqui ⬇️.</p>
+		<p class="mx-4 mb-2">Check out my work here ⬇️.</p>
 	</div>
 </section>
