--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,12 +1,12 @@
 <footer data-testid="footer" class="p-6 text-center text-sm text-black dark:text-white">
 	<p>
-		Copyright © {new Date().getFullYear()}. Todos los derechos reservados. Hecho por<a
+		Copyright © {new Date().getFullYear()}. All rights reserved. Made by<a
 			href="https://github.com/badkitten-bug"
 			target="_blank"
 			rel="noopener"
 		>
 			<span class="text-green"> Steve Gomez </span>
 		</a>
-		e inspirado por Veranika Kasparevych
+		and inspired by Veranika Kasparevych.
 	</p>
 </footer>
