--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -12,7 +12,7 @@ const projects = await getCollection('projects', ({ data }) => {
 	id="projects"
 	class="mb-10 flex flex-col items-center justify-center md:mb-0 md:h-screen"
 >
-	<h2 class="font-monospace text-2xl text-green lg:text-4xl">Proyectos</h2>
+	<h2 class="font-monospace text-2xl text-green lg:text-4xl">Projects</h2>
 	<span class="mb-10 h-1 w-10 bg-green"></span>
 	<div class="mb-10 flex w-full flex-col flex-wrap items-center md:flex-row">
 		{
