--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,4 @@
 ---
-import heroImage from '@assets/images/hero.svg';
-import { Image } from '@astrojs/image/components';
 import Button from '@components/ui/Button.astro';
 ---
 
@@ -10,25 +8,29 @@ import Button from '@components/ui/Button.astro';
 >
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
-			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hi, I'm  <span class="text-green">Steve</span>, a software developer with over <span class="text-green">+2 years</span> of experience.
+			<h1 class="mb-6 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
+				¡Hola! Soy <span class="text-green">Steve</span>, desarrollador full-stack con <span class="text-green">+4 años</span> de experiencia.
 			</h1>
+			<div class="mb-8">
+				<p class="text-lg text-gray-600 dark:text-gray-300 lg:text-xl">
+					Especializado en <span class="text-amber font-semibold">NestJS</span>, <span class="text-amber font-semibold">Go</span>, <span class="text-amber font-semibold">Astro</span> y <span class="text-amber font-semibold">JavaScript</span>
+				</p>
+			</div>
 		</div>
 		<div class="mb-10">
 			<a href="#about">
-				<Button style={'primary'} size={'lg'} class={'flex'} name="learn more">Read more!</Button>
+				<Button style={'primary'} size={'lg'} class={'flex'} name="learn more">¡Conoce más!</Button>
 			</a>
 		</div>
 	</div>
 	<div data-testid="hero-img" class="mb-10 flex w-1/2 items-center justify-center">
-		<Image
-			src={heroImage}
+		<img
+			src="/hero.svg"
 			alt="Coding boys"
-			aspectRatio="4:4"
-			format="svg"
 			width={500}
 			height={500}
 			loading="eager"
+			class="max-w-full h-auto"
 		/>
 	</div>
 </section>
