--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import About from '@components/About.astro';
+import AboutAndStack from '@components/AboutAndStack.astro';
 import Contact from '@components/Contact.astro';
 import Hero from '@components/Hero.astro';
 import Projects from '@components/Projects.astro';
@@ -11,7 +11,7 @@ import Layout from '@layouts/Layout.astro';
 <Layout>
 	<main>
 		<Hero />
-		<About />
+		<AboutAndStack />
 		<CardLinkedin />
 		<Projects />
 		<Contact />
