--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -19,12 +19,12 @@ const {
 } = Astro.props;
 ---
 
-<section class="w-full p-4 md:w-1/2 lg:w-1/3">
+<section class="w-full">
 	<article
 		data-testId="card"
-		class="rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl"
+		class="rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl h-full flex flex-col"
 	>
-		<a href={url} aria-label="link to project">
+		<a href={url} aria-label="link to project" class="flex flex-col h-full">
 			<div class="relative flex items-end overflow-hidden rounded-xl">
 				<img
 					src="/project.png"
@@ -35,9 +35,9 @@ const {
 					class="object-cover w-full h-auto"
 				/>
 			</div>
-			<div class="mt-1 p-2">
+			<div class="mt-1 p-2 flex-1 flex flex-col">
 				<h3 class="text-xl text-green lg:text-2xl">{title}</h3>
-				<p class="text-s text-black">{description}</p>
+				<p class="text-s text-black flex-1">{description}</p>
 				<Tags tags={tags} />
 			</div>
 		</a>
