Refactorizar la obtención del idioma en varios componentes. Se reemplaza la lógica de obtención del idioma utilizando `Astro.url.pathname` en lugar de `Astro.request.url`, mejorando la consistencia en la gestión de la internacionalización en los componentes "Contacto", "Footer", "Navbar" y "Proyectos".

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,8 +2,7 @@
 import Button from '@components/ui/Button.astro';
 import Social from '@components/ui/Social.astro';
 import { getI18n } from '@content/i18n';
-const url = new URL(Astro.request.url);
-const lang = url.searchParams.get('lang') || 'es';
+const lang = Astro.url.pathname.split('/')[1] || 'es';
 const { t } = getI18n(lang);
 ---
 
