--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,8 +2,7 @@
 import Card from '@components/ui/Card.astro';
 import { getCollection } from 'astro:content';
 import { getI18n } from '@content/i18n';
-const url = new URL(Astro.request.url);
-const lang = url.searchParams.get('lang') || 'es';
+const lang = Astro.url.pathname.split('/')[1] || 'es';
 const { t } = getI18n(lang);
 
 const projects = await getCollection('projects', ({ data }) => {
