--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import LanguageToggle from '@components/ui/LanguageToggle.jsx';
 import { Astronav, MenuIcon, MenuItems } from 'astro-navbar';
 import { getI18n } from '@content/i18n';
 
-const { lang = 'es' } = Astro.props;
+const lang = Astro.url.pathname.split('/')[1] || 'es';
 const { t } = getI18n(lang);
 
 const prefix = `/${lang}`;
