--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,5 +1,5 @@
 ---
-import Card from '@components/ui/Card.astro';
+import ProjectsGalleryReact from './ui/ProjectsGalleryReact.jsx';
 import { getCollection } from 'astro:content';
 import { getI18n } from '@content/i18n';
 const lang = Astro.url.pathname.split('/')[1] || 'es';
@@ -10,46 +10,10 @@ const projects = await getCollection('projects', ({ data }) => {
 });
 ---
 
-<section
-	data-testid="projects"
-	id="projects"
-	class="mt-8 mb-10 flex flex-col items-center justify-center"
->
-	<h2 class="font-monospace text-2xl text-green lg:text-4xl">{t('projects.title')}</h2>
-	<span class="mb-10 h-1 w-10 bg-green"></span>
-	<div class="grid w-full max-w-7xl gap-8 mb-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
-		{
-			projects.map((project) => (
-				<Card
-					url={project.data.link}
-					title={project.data.title}
-					description={project.data.description}
-					alt={project.data.img_alt}
-					tags={project.data.tags}
-				/>
-			))
-		}
-	</div>
-	<a
-		href="https://github.com/"
-		target="_blank"
-		rel="noopener"
-		class="flex flex-row text-black hover:text-green dark:text-white dark:hover:text-green"
-		aria-label="link to repository"
-	>
-	{t('projects.viewAll')}
-		<svg
-			xmlns="http://www.w3.org/2000/svg"
-			fill="none"
-			viewBox="0 0 24 24"
-			stroke-width="1.5"
-			stroke="currentColor"
-			class="ml-1 h-6 w-6"
-		>
-			<path
-				stroke-linecap="round"
-				stroke-linejoin="round"
-				d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
-		</svg>
-	</a>
+<section data-testid="projects" id="projects" class="w-full max-w-7xl mx-auto px-2 py-12 flex flex-col items-center justify-center">
+  <h2 class="font-monospace text-2xl text-green lg:text-4xl">{t('projects.title')}</h2>
+  <span class="mb-10 h-1 w-10 bg-green"></span>
+  <div class="w-full">
+    <ProjectsGalleryReact client:only="react" projects={projects} />
+  </div>
 </section>
